Add Python code solutions for patterns 20 to 28

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -1469,7 +1469,7 @@
    "id": "92942c57",
    "metadata": {},
    "source": [
-    "#### User Input = 6"
+    "#### User Input = 6 (Input >= 5)"
    ]
   },
   {
@@ -1482,11 +1482,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "9bd5eb38",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      " ***   ***\n",
+      "***** *****\n",
+      "***********\n",
+      " *********\n",
+      "  *******\n",
+      "   *****\n",
+      "    ***\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "center = n-1\n",
+    "for row in range(2):\n",
+    "    for col in range(2*n-2+row):\n",
+    "        if col==0 and row==0 or center+row-1 <= col <= center-row+1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()\n",
+    "for row in range(n):\n",
+    "    for col in range(2*n-1-row):\n",
+    "        if col < row:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1514,11 +1547,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "de285b04",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 8\n",
+      "       *             *\n",
+      "      ***           ***\n",
+      "     *****         *****\n",
+      "    *******       *******\n",
+      "   *********     *********\n",
+      "  ***********   ***********\n",
+      " ************* *************\n",
+      "*****************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "formula = 3*n-2\n",
+    "for row in range(n):\n",
+    "    for col in range(formula+row):\n",
+    "        if col < n-1-row or n+row <= col < formula-row-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1546,11 +1605,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "8fdd42b3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "1010101\n",
+      "0101010\n",
+      "1010101\n",
+      "0101010\n",
+      "1010101\n",
+      "0101010\n",
+      "1010101\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n):\n",
+    "        if (row+col)%2==0:\n",
+    "            print('1', end='')\n",
+    "        else:\n",
+    "            print('0', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1578,11 +1661,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "4a6efc00",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1 \n",
+      "2 3 \n",
+      "4 5 6 \n",
+      "7 8 9 10 \n",
+      "11 12 13 14 15 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "num = 0\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1):\n",
+    "        num += 1\n",
+    "        print(num,'', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1610,11 +1714,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "930260ac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1\n",
+      "21\n",
+      "321\n",
+      "4321\n",
+      "54321\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1,0,-1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1642,11 +1765,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "50b7f2bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "5\n",
+      "54\n",
+      "543\n",
+      "5432\n",
+      "54321\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n, n-row-1, -1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1674,11 +1816,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "04d99fb4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "1\n",
+      "10\n",
+      "101\n",
+      "1010\n",
+      "10101\n",
+      "101010\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1):\n",
+    "        if col%2==0:\n",
+    "            print('1', end='')\n",
+    "        else:\n",
+    "            print('0', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1706,11 +1871,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "f222b38c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "01234\n",
+      "0123\n",
+      "012\n",
+      "01\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1738,11 +1922,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "dfc2f582",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "5432112345\n",
+      "54322345\n",
+      "543345\n",
+      "5445\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n,row,-1):\n",
+    "        print(col, end='')\n",
+    "    for col in range(row+1,n+1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
