--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -1469,7 +1469,7 @@
    "id": "92942c57",
    "metadata": {},
    "source": [
-    "#### User Input = 6 (Input >= 5)"
+    "#### User Input = 6"
    ]
   },
   {
@@ -1975,11 +1975,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "70f8720c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "      1\n",
+      "     212\n",
+      "    32123\n",
+      "   4321234\n",
+      "  543212345\n",
+      " 65432123456\n",
+      "7654321234567\n",
+      " 65432123456\n",
+      "  543212345\n",
+      "   4321234\n",
+      "    32123\n",
+      "     212\n",
+      "      1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        space = n - row - 1\n",
+    "        m = row + 1\n",
+    "    else:\n",
+    "        space += 1\n",
+    "        m -= 1\n",
+    "    for col in range(space):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(m,0,-1):\n",
+    "        print(col, end='')\n",
+    "    for col in range(2,m+1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2007,11 +2044,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ee5e0cab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    1\n",
+      "   123\n",
+      "  12345\n",
+      " 1234567\n",
+      "123456789\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(1,n+row+1):\n",
+    "        if col < n-row:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(col-(n-row-1), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2039,11 +2098,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "9516c59c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    1 \n",
+      "   1 1 \n",
+      "  1 2 1 \n",
+      " 1 3 3 1 \n",
+      "1 4 6 4 1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Method 1\n",
+    "n = int(input('Enter Number: '))\n",
+    "previous = [1]\n",
+    "nxt = [1]\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row-1):\n",
+    "        print(' ', end='')\n",
+    "    if row<2:\n",
+    "        for col in range(len(previous)):\n",
+    "            print(previous[col], end=' ')\n",
+    "            nxt.append(previous[col])\n",
+    "    else:\n",
+    "        print(previous[0], end=' ')\n",
+    "        nxt.append(previous[0])\n",
+    "        \n",
+    "        for col in range(len(previous)-1):\n",
+    "            print(previous[col]+previous[col+1], end=' ')\n",
+    "            nxt.append(previous[col]+previous[col+1])\n",
+    "            \n",
+    "        print(previous[-1], end=' ')\n",
+    "        nxt.append(previous[-1])\n",
+    "        \n",
+    "    previous = nxt.copy()\n",
+    "    nxt = []\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2071,11 +2169,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "470a516d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1 2 3 4 5 \n",
+      " 2 3 4 5 \n",
+      "  3 4 5 \n",
+      "   4 5 \n",
+      "    5 \n",
+      "   4 5 \n",
+      "  3 4 5 \n",
+      " 2 3 4 5 \n",
+      "1 2 3 4 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "m = 2*n-1\n",
+    "for row in range(m):\n",
+    "    if row < n:\n",
+    "        start_num = row + 1\n",
+    "    else:\n",
+    "        start_num = m - row\n",
+    "    for col in range(start_num-1):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(start_num,n+1):\n",
+    "        print(col, end=' ')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2103,11 +2231,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4456d645",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "1234567\n",
+      "123456\n",
+      "12345\n",
+      "1234\n",
+      "123\n",
+      "12\n",
+      "1\n",
+      "12\n",
+      "123\n",
+      "1234\n",
+      "12345\n",
+      "123456\n",
+      "1234567\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        end = n - row + 1\n",
+    "    else:\n",
+    "        end += 1\n",
+    "    for col in range(1, end):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2135,11 +2294,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6ab2f923",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "1        1\n",
+      "12      21\n",
+      "123    321\n",
+      "1234  4321\n",
+      "1234554321\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "m = 2*n\n",
+    "for row in range(n):\n",
+    "    for col in range(1,row+2):\n",
+    "        print(col, end='')\n",
+    "    for col in range(m-2*(1+row)):\n",
+    "        print(' ',end='')\n",
+    "    for col in range(row+1,0,-1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
