Add Python code solutions for patterns 35 to 39

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -2350,11 +2350,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0e14753e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "      1\n",
+      "     121\n",
+      "    12321\n",
+      "   1234321\n",
+      "  123454321\n",
+      " 12345654321\n",
+      "1234567654321\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(1,n+1):\n",
+    "    for col in range(n-row):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(1,row):\n",
+    "        print(col, end='')\n",
+    "    for col in range(row,0,-1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2382,11 +2407,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "253e99df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "4444444\n",
+      "4333334\n",
+      "4322234\n",
+      "4321234\n",
+      "4322234\n",
+      "4333334\n",
+      "4444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        center_num = n - row\n",
+    "        m = 2*n-1 - 2*row\n",
+    "        sides = n - row + 1\n",
+    "    else:\n",
+    "        center_num += 1\n",
+    "        m += 2\n",
+    "        sides += 1\n",
+    "    for col in range(n,sides-1,-1):\n",
+    "        print(col, end='')\n",
+    "    for col in range(m):\n",
+    "        print(center_num, end='')\n",
+    "    for col in range(sides,n+1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2414,11 +2472,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "9e9c7f52",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "1111111\n",
+      "1111122\n",
+      "1111333\n",
+      "1114444\n",
+      "1155555\n",
+      "1666666\n",
+      "7777777\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row-1):\n",
+    "        print(1, end='')\n",
+    "    for col in range(row+1):\n",
+    "        print(row+1, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2446,11 +2527,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "59810328",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "1234567\n",
+      "2345671\n",
+      "3456712\n",
+      "4567123\n",
+      "5671234\n",
+      "6712345\n",
+      "7123456\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row+1,n+1):\n",
+    "        print(col, end='')\n",
+    "    for col in range(1,row+1):\n",
+    "        print(col, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2478,11 +2582,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "0a2c079f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "3\n",
+      "44\n",
+      "555\n",
+      "6666\n",
+      "77777\n",
+      "6666\n",
+      "555\n",
+      "44\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        end = row + 1\n",
+    "        num = 3 + row\n",
+    "    else:\n",
+    "        end -= 1\n",
+    "        num -= 1\n",
+    "    for col in range(end):\n",
+    "        print(num, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
