--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -2630,7 +2630,7 @@
    "id": "f5a12cca",
    "metadata": {},
    "source": [
-    "#### User Input = 5 or 'E'"
+    "#### User Input = 5 or 'E' (Max input - 26 or 'Z')"
    ]
   },
   {
@@ -2643,11 +2643,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "3135c8a8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number or Letter between A-Z: e\n",
+      "A\n",
+      "AB\n",
+      "ABC\n",
+      "ABCD\n",
+      "ABCDE\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = input('Enter Number or Letter between A-Z: ')\n",
+    "if n.isdigit():\n",
+    "    n = int(n)\n",
+    "else:\n",
+    "    n = ord(n.upper())\n",
+    "    n = n - ord('A') + 1\n",
+    "for row in range(n):\n",
+    "    for col in range(ord('A'),ord('A')+row+1):\n",
+    "        print(chr(col), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2675,11 +2699,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8d9b24b3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "A\n",
+      "BC\n",
+      "DEF\n",
+      "GHIJ\n",
+      "KLMNO\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "m = ord('A')\n",
+    "for row in range(n):\n",
+    "    m += row\n",
+    "    for col in range(m, m+row+1):\n",
+    "        print(chr(col), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
