Add Python code solutions for patterns 42 to 45

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -2739,7 +2739,7 @@
    "id": "3b026854",
    "metadata": {},
    "source": [
-    "#### User Input = 5 or 'I'"
+    "#### User Input = 5 or 'I' (Character on odd positions only like 'A', 'C', 'E' etc.)"
    ]
   },
   {
@@ -2752,11 +2752,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "adf8bb34",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    A\n",
+      "   ABC\n",
+      "  ABCDE\n",
+      " ABCDEFG\n",
+      "ABCDEFGHI\n",
+      " ABCDEFG\n",
+      "  ABCDE\n",
+      "   ABC\n",
+      "    A\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(n) if (n:=input('Enter Number: ')).isdigit() else int((ord(n.upper())-ord('A'))/2)+1\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        end = 2*row + 1\n",
+    "        spaces = n-row-1\n",
+    "    else:\n",
+    "        end -= 2\n",
+    "        spaces += 1\n",
+    "    for col in range(spaces):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(ord('A'),ord('A')+end):\n",
+    "        print(chr(col), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2784,11 +2815,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "c8cd302d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: e\n",
+      "    A\n",
+      "   ABA\n",
+      "  ABCBA\n",
+      " ABCDCBA\n",
+      "ABCDEDCBA\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(n) if (n:=input('Enter Number: ')).isdigit() else ord(n.upper())-ord('A')+1\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row-1):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(ord('A'), ord('A')+row+1):\n",
+    "        print(chr(col), end='')\n",
+    "    for col in range(ord('A')+row-1, ord('A')-1, -1):\n",
+    "        print(chr(col), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2816,18 +2870,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "312c4f5e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: e\n",
+      "    A\n",
+      "   B B\n",
+      "  C C C\n",
+      " D D D D\n",
+      "E E E E E\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(n) if (n:=input('Enter Number: ')).isdigit() else ord(n.upper())-ord('A')+1\n",
+    "for row in range(n):\n",
+    "    for col in range(n+row):\n",
+    "        if col < n-row-1 or (row-col)%2!=0 and n%2!=0 or (row-col)%2==0 and n%2==0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(chr(ord('A')+row), end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "801c3c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: f\n",
+      "     A \n",
+      "    B B \n",
+      "   C C C \n",
+      "  D D D D \n",
+      " E E E E E \n",
+      "F F F F F F \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Other method\n",
+    "n = int(n) if (n:=input('Enter Number: ')).isdigit() else ord(n.upper())-ord('A')+1\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row-1):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(row+1):\n",
+    "        print(chr(ord('A')+row), end=' ')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "342bfb85",
    "metadata": {},
    "source": [
-    "## Pattern 45"
+    "##### Pattern 45"
    ]
   },
   {
@@ -2848,11 +2955,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "fd780d18",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: f\n",
+      "     A\n",
+      "    A B\n",
+      "   A B C\n",
+      "  A B C D\n",
+      " A B C D E\n",
+      "A B C D E F\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(n) if (n:=input('Enter Number: ')).isdigit() else ord(n.upper())-ord('A')+1\n",
+    "for row in range(n):\n",
+    "    nxt = 0\n",
+    "    for col in range(n+row):\n",
+    "        if col < n-row-1 or (row-col)%2!=0 and n%2!=0 or (row-col)%2==0 and n%2==0:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(chr(ord('A')+nxt), end='')\n",
+    "            nxt += 1\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "2837e566",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: e\n",
+      "    A \n",
+      "   A B \n",
+      "  A B C \n",
+      " A B C D \n",
+      "A B C D E \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Other method\n",
+    "n = int(n) if (n:=input('Enter Number: ')).isdigit() else ord(n.upper())-ord('A')+1\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row-1):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(row+1):\n",
+    "        print(chr(ord('A')+col), end=' ')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
