Add Python code solutions for pattern 46 and 47

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -2901,7 +2901,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "801c3c10",
+   "id": "77365028",
    "metadata": {},
    "outputs": [
     {
@@ -2989,7 +2989,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2837e566",
+   "id": "4f52339f",
    "metadata": {},
    "outputs": [
     {
@@ -3029,7 +3029,7 @@
    "id": "772a325c",
    "metadata": {},
    "source": [
-    "#### User Input = 5 or 'I'"
+    "#### User Input = 5 or 'I' (Character on odd positions only like 'A', 'C', 'E' etc.)"
    ]
   },
   {
@@ -3042,11 +3042,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d2b9ced8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: i\n",
+      "ABCDEFGHI\n",
+      " ABCDEFG\n",
+      "  ABCDE\n",
+      "   ABC\n",
+      "    A\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(n) if (n:=input('Enter Number: ')).isdigit() else int((ord(n.upper())-ord('A'))/2)+1\n",
+    "for row in range(n):\n",
+    "    for col in range(row):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(ord('A'), ord('A')+2*(n-row)-1):\n",
+    "        print(chr(col), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3074,11 +3095,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "bf6e0064",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    A\n",
+      "   B C\n",
+      "  D   E\n",
+      " F     G\n",
+      "HIJKLMNOP\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "nxt = 0\n",
+    "for row in range(n):\n",
+    "    for col in range(n+row):\n",
+    "        if (col<n-row-1 or n-row-1<col<n+row-1) and row!=n-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(chr(ord('A')+nxt), end='')\n",
+    "            nxt += 1\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
