Add Python code solutions for patterns 48 to 53

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -3151,11 +3151,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4938aac6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    A\n",
+      "   B B\n",
+      "  C   C\n",
+      " D     D\n",
+      "E       E\n",
+      " D     D\n",
+      "  C   C\n",
+      "   B B\n",
+      "    A\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(n) if (n:=input('Enter Number: ')).isdigit() else ord(n.upper())-ord('A')+1\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        end = 2*row+1\n",
+    "        spaces = n-row-1\n",
+    "        nxt = row\n",
+    "    else:\n",
+    "        end -= 2\n",
+    "        spaces += 1\n",
+    "        nxt -= 1\n",
+    "    for col in range(spaces):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(end):\n",
+    "        if 0<col<end-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print(chr(ord('A')+nxt), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3183,11 +3219,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8b44851a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "ABCDE\n",
+      "ABCD\n",
+      "ABC\n",
+      "AB\n",
+      "A\n",
+      "AB\n",
+      "ABC\n",
+      "ABCD\n",
+      "ABCDE\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        end = n - row\n",
+    "    else:\n",
+    "        end += 1\n",
+    "    for col in range(ord('A'), ord('A')+end):\n",
+    "        print(chr(col), end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3215,11 +3278,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8cc8995e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "      *\n",
+      "     ---\n",
+      "    *****\n",
+      "   -------\n",
+      "  *********\n",
+      " -----------\n",
+      "*************\n",
+      " -----------\n",
+      "  *********\n",
+      "   -------\n",
+      "    *****\n",
+      "     ---\n",
+      "      *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        end = n + row\n",
+    "    else:\n",
+    "        end -= 1\n",
+    "    for col in range(end):\n",
+    "        if row%2==0 and col>=2*n-1-end:\n",
+    "            print('*', end='')\n",
+    "        elif col>=2*n-1-end:\n",
+    "            print('-', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3247,11 +3346,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d8745a84",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 6\n",
+      "     *\n",
+      "    *-*\n",
+      "   *---*\n",
+      "  *-----*\n",
+      " *-------*\n",
+      "*---------*\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n+row):\n",
+    "        if col<n-row-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            if col in [n+row-1, n-row-1]:\n",
+    "                print('*', end='')\n",
+    "            else:\n",
+    "                print('-', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3279,11 +3404,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6b823f48",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    *\n",
+      "   --\n",
+      "  ***\n",
+      " ----\n",
+      "*****\n",
+      " ----\n",
+      "  ***\n",
+      "   --\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        spaces = n - row - 1\n",
+    "    else:\n",
+    "        spaces += 1\n",
+    "    for col in range(n):\n",
+    "        if row%2==0 and col>=spaces:\n",
+    "            print('*', end='')\n",
+    "        elif col>=spaces:\n",
+    "            print('-', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3311,11 +3468,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "a0c7c025",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "********1********\n",
+      "*******2*2*******\n",
+      "******3*3*3******\n",
+      "*****4*4*4*4*****\n",
+      "****5*5*5*5*5****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    left = 2*n-1-(row+1)\n",
+    "    right = left + 2*row\n",
+    "    for col in range(4*n-3):\n",
+    "        if col<left or col>right:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            if row%2==0 and col%2==0 or row%2!=0 and col%2!=0:\n",
+    "                print(row+1, end='')\n",
+    "            else:\n",
+    "                print('*', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
