Add Python code solutions for pattern 54 and 55

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -3529,11 +3529,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e86d6137",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "------------g------------\n",
+      "----------g-f-g----------\n",
+      "--------g-f-e-f-g--------\n",
+      "------g-f-e-d-e-f-g------\n",
+      "----g-f-e-d-c-d-e-f-g----\n",
+      "--g-f-e-d-c-b-c-d-e-f-g--\n",
+      "g-f-e-d-c-b-a-b-c-d-e-f-g\n",
+      "--g-f-e-d-c-b-c-d-e-f-g--\n",
+      "----g-f-e-d-c-d-e-f-g----\n",
+      "------g-f-e-d-e-f-g------\n",
+      "--------g-f-e-f-g--------\n",
+      "----------g-f-g----------\n",
+      "------------g------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        left = 2*n-1 - 2*(row+1)\n",
+    "        right = 2*n-1 + 2*row\n",
+    "    else:\n",
+    "        left += 2\n",
+    "        right -= 2\n",
+    "    character = ord('a') + n - 1\n",
+    "    for col in range(4*n-3):\n",
+    "        if col <= left or col >= right or col%2!=0:\n",
+    "            print('-', end='')\n",
+    "        else:\n",
+    "            print(chr(character), end='')\n",
+    "            if col < 2*(n-1):\n",
+    "                character -= 1\n",
+    "            else:\n",
+    "                character += 1\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3567,11 +3608,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "9d244301",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Odd Number: 9\n",
+      "------------.|.------------\n",
+      "---------.|..|..|.---------\n",
+      "------.|..|..|..|..|.------\n",
+      "---.|..|..|..|..|..|..|.---\n",
+      "----------WELCOME----------\n",
+      "---.|..|..|..|..|..|..|.---\n",
+      "------.|..|..|..|..|.------\n",
+      "---------.|..|..|.---------\n",
+      "------------.|.------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Odd Number: '))\n",
+    "m = 3*n\n",
+    "for row in range(n):\n",
+    "    if row < n/2:\n",
+    "        sides = int((m - 3*(2*row+1))/2)\n",
+    "        center = 2*row+1\n",
+    "    elif row > n/2:\n",
+    "        sides += 3\n",
+    "        center -= 2\n",
+    "    if row!=(n-1)/2:  \n",
+    "        for col in range(sides):\n",
+    "            print('-', end='')\n",
+    "        for col in range(center):\n",
+    "            print('.|.', end='')\n",
+    "        for col in range(sides):\n",
+    "            print('-', end='')\n",
+    "    else:\n",
+    "        for col in range(m-6):\n",
+    "            if col==(m-7)/2:\n",
+    "                print('WELCOME', end='')\n",
+    "            else:\n",
+    "                print('-', end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
