Add Python code solution for pattern 56

--- a/Pattern Questions for Practice Solutions.ipynb
+++ b/Pattern Questions for Practice Solutions.ipynb
@@ -3668,7 +3668,7 @@
    "id": "07cbfd84",
    "metadata": {},
    "source": [
-    "#### User Input = 5"
+    "#### User Input = 5 (Odd number only)"
    ]
   },
   {
@@ -3676,16 +3676,108 @@
    "id": "80e0a33f",
    "metadata": {},
    "source": [
+    "In the Image of this pattern,\n",
+    "\n",
+    "The length of columns in the middle part is 27, and at the bottom, the maximum column length is 29 (at row number 20). The image contains the wrong number of columns.\n",
+    "\n",
+    "Problem Link:\n",
+    "https://www.hackerrank.com/challenges/text-alignment/problem\n",
+    "<br>\n",
     "<img align=left src=\"Pattern images/57.jpg\" width=\"355\" height=\"355\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "21e8729b",
+   "execution_count": 15,
+   "id": "3c8d8541",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 7\n",
+      "      H\n",
+      "     HHH\n",
+      "    HHHHH\n",
+      "   HHHHHHH\n",
+      "  HHHHHHHHH\n",
+      " HHHHHHHHHHH\n",
+      "HHHHHHHHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH\n",
+      "   HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH\n",
+      "   HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH\n",
+      "   HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "   HHHHHHH                     HHHHHHH\n",
+      "                            HHHHHHHHHHHHH\n",
+      "                             HHHHHHHHHHH\n",
+      "                              HHHHHHHHH\n",
+      "                               HHHHHHH\n",
+      "                                HHHHH\n",
+      "                                 HHH\n",
+      "                                  H\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n+row):\n",
+    "        if col<n-row-1:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('H', end='')\n",
+    "    print()\n",
+    "    \n",
+    "a = int((n-1)/2)\n",
+    "b = n*5 + a\n",
+    "for row in range(n+1):\n",
+    "    for col in range(b):\n",
+    "        if col<a or col>=n+a and col<n*4 + a:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('H', end='')\n",
+    "    print()\n",
+    "    \n",
+    "for row in range(int((n+1)/2)):\n",
+    "    for col in range(b):\n",
+    "        if col<a:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('H', end='')\n",
+    "    print()\n",
+    "    \n",
+    "for row in range(n+1):\n",
+    "    for col in range(b):\n",
+    "        if col<a or col>=n+a and col<n*4 + a:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('H', end='')\n",
+    "    print()\n",
+    "\n",
+    "for row in range(n):\n",
+    "    for col in range(b+a-row):\n",
+    "        if col<b+a-(2*n-1)+row:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('H', end='')\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
