Add Solutions for pattern 1 and 2 in Practice File 2

--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -13,7 +13,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 1:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
-    "<h2 style=\"font-size: 15px;\">User Input -> n=3, m=5</h2>\n",
+    "<h2 style=\"font-size: 20px;\">User Input -> n=3, m=5</h2>\n",
     "*****      \n",
     "*****\n",
     "*****\n",
@@ -21,6 +21,33 @@
     "</pre>\n",
     "</body>\n",
     "</html>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b7d0504c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter n: 3\n",
+      "Enter m: 5\n",
+      "*****\n",
+      "*****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter n: '))\n",
+    "m = int(input('Enter m: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(m):\n",
+    "        print('*', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -36,6 +63,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 2:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 4</h2>\n",
     "****\n",
     " ****\n",
     "  ****\n",
@@ -44,6 +72,35 @@
     "</pre>\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9955977d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 4\n",
+      "****\n",
+      " ****\n",
+      "  ****\n",
+      "   ****\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n+row):\n",
+    "        if col<row:\n",
+    "            print(' ', end='')\n",
+    "        else:\n",
+    "            print('*', end='')\n",
+    "    print()"
    ]
   },
   {
@@ -59,6 +116,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 3:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 8</h2>\n",
     "       *\n",
     "      * *\n",
     "     * * *\n",
