--- a/Pattern Questions for Practice 2 Solutions.ipynb
+++ b/Pattern Questions for Practice 2 Solutions.ipynb
@@ -132,6 +132,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3d837bc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 8\n",
+      "       *\n",
+      "      * *\n",
+      "     * * *\n",
+      "    * * * *\n",
+      "   * * * * *\n",
+      "  * * * * * *\n",
+      " * * * * * * *\n",
+      "* * * * * * * *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(n-row-1):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(2*(row+1)-1):\n",
+    "        if col%2==0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1c59e8cc",
    "metadata": {},
@@ -144,6 +179,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 4:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 10</h2>\n",
     "* * * * * * * * * *\n",
     " * * * * * * * * *\n",
     "  * * * * * * * *\n",
@@ -161,6 +197,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e08bd941",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 10\n",
+      "* * * * * * * * * *\n",
+      " * * * * * * * * *\n",
+      "  * * * * * * * *\n",
+      "   * * * * * * *\n",
+      "    * * * * * *\n",
+      "     * * * * *\n",
+      "      * * * *\n",
+      "       * * *\n",
+      "        * *\n",
+      "         *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(n):\n",
+    "    for col in range(row):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(2*(n-row)-1):\n",
+    "        if col%2==0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6aa798ed",
    "metadata": {},
@@ -173,6 +246,7 @@
     "<h2 style=\"font-size: 20px;\">Pattern 5:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
+    "<h2 style=\"font-size: 20px;\">User Input = 5</h2>\n",
     "    *\n",
     "   * *\n",
     "  * * *\n",
@@ -189,6 +263,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "af5af479",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Number: 5\n",
+      "    *\n",
+      "   * *\n",
+      "  * * *\n",
+      " * * * *\n",
+      "* * * * *\n",
+      " * * * *\n",
+      "  * * *\n",
+      "   * *\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('Enter Number: '))\n",
+    "for row in range(2*n-1):\n",
+    "    if row < n:\n",
+    "        spaces = n-row-1\n",
+    "        stars = 2*(row+1)-1\n",
+    "    else:\n",
+    "        spaces += 1\n",
+    "        stars -= 2\n",
+    "    for col in range(spaces):\n",
+    "        print(' ', end='')\n",
+    "    for col in range(stars):\n",
+    "        if col%2==0:\n",
+    "            print('*', end='')\n",
+    "        else:\n",
+    "            print(' ', end='')\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8f5b58a4",
    "metadata": {},
@@ -201,15 +317,15 @@
     "<h2 style=\"font-size: 20px;\">Pattern 6:</h2>\n",
     "<pre>\n",
     "<span style=\"font-size: 20px;\">\n",
-    "*                         *\n",
-    "   *                   *\n",
-    "*     *             *     *\n",
-    "   *     *       *     *\n",
-    "*     *      *      *     *\n",
-    "   *     *       *     *\n",
-    "*     *             *     *\n",
-    "   *                   *\n",
-    "*                         *\n",
+    "*                       *\n",
+    "   *                 *\n",
+    "*     *           *     *\n",
+    "   *     *     *     *\n",
+    "*     *     *     *     *\n",
+    "   *     *     *     *\n",
+    "*     *           *     *\n",
+    "   *                 *\n",
+    "*                       *\n",
     "</span>\n",
     "</pre>\n",
     "</body>\n",
@@ -217,11 +333,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8c60705",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "f4b23dd7",
    "metadata": {},
    "source": [
-    "<!DOCTYPE html>\n",
+    "##### <!DOCTYPE html>\n",
     "<html>\n",
     "<head>\n",
     "</head>\n",
